--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .leaflet-container{
